# lylics

./: .dockerignore  .prettierrc  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  astro.config.mjs  package-lock.json  package.json
--help/: SKILL.md
.github/workflows/: ci.yml  release.yml
.vercel/output/: config.json
.vercel/output/_functions/: entry.mjs  manifest_BWqi-Jnv.mjs
.vercel/output/_functions/_astro/: swagger-dark.B2VfGpfj.css
.vercel/output/_functions/chunks/: _docs__CL6TMe6m.mjs  _gui__CUY8Y_tK.mjs  astro_CKbA4atV.mjs  generic_CDmRHirH.mjs  gui-redoc-endpoint_CjSbLgG4.mjs  gui-swagger-endpoint.02e9ab3b_BstuW1Z-.mjs  gui-swagger-endpoint_EUtD8ifx.mjs  index_BapWLO9T.mjs  index_BmeX5bH8.mjs  index_DQ1sAf2T.mjs  index_OkBbAQoA.mjs  prerender_NG0fqPXJ.mjs
.vercel/output/functions/_render.func/: .vc-config.json
.vercel/output/static/api/: openapi.json
charts/lylics/: Chart.yaml  values.yaml
charts/lylics/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
db/: config.ts  seed.ts
lyrics/: default.json  lyrics.json
scripts/: bootstrap.sh  infra-down.sh  infra-up.sh  setup-github.sh  setup.sh
src/: env.d.ts  lyrics.rs  main.rs
src/definitions/: openapi.yaml
src/pages/: [docs].astro  index.astro
src/pages/api/: index.ts
src/pages/api-docs/: [gui].astro
src/pages/api/[id]/: index.ts
src/pages/new/: index.astro
src/types/: openapi.d.ts
terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/bootstrap/: main.tf
(+15 files in other folders)
