[package]
name = "lylics"
version = "0.1.0"
edition = "2021"
description = "A lightweight microservice that serves random lyrics chunks via SSE"
license = "MIT"
repository = "https://github.com/kayaman/lylics"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
